[gd_scene load_steps=8 format=3 uid="uid://doa61a6l33235"]

[ext_resource type="PackedScene" uid="uid://cvtm6extr842x" path="res://uploads_files_4948127_Low+poly+living+room.glb" id="1_3doki"]
[ext_resource type="Script" path="res://SmartLight.gd" id="2_aurld"]
[ext_resource type="Script" path="res://FirstPersonPlayer.gd" id="3_42y3j"]

[sub_resource type="SphereMesh" id="SphereMesh_xj8py"]
radius = 0.8
height = 0.5

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_4boy8"]
height = 5.0

[sub_resource type="BoxMesh" id="BoxMesh_65str"]
size = Vector3(200, 0.01, 200)

[sub_resource type="BoxShape3D" id="BoxShape3D_30hy8"]
size = Vector3(100, 0.01, 100)

[node name="uploads_files_4948127_Low+poly+living+room" instance=ExtResource("1_3doki")]

[node name="SmartLight" type="Node3D" parent="." index="26"]
script = ExtResource("2_aurld")

[node name="LightBulbMesh" type="MeshInstance3D" parent="SmartLight" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 0)
mesh = SubResource("SphereMesh_xj8py")

[node name="OmniLight3D" type="OmniLight3D" parent="SmartLight" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 0)
visible = false
light_energy = 10.0
light_indirect_energy = 10.0

[node name="HTTPRequest" type="HTTPRequest" parent="SmartLight" index="2"]

[node name="C2DHTTPRequest" type="HTTPRequest" parent="SmartLight" index="3"]

[node name="FirstPersonPlayer" type="CharacterBody3D" parent="." index="27"]
script = ExtResource("3_42y3j")
walk_speed = null
run_speed = null
jump_velocity = null
mouse_sensitivity = null
camera_smooth = null
head_bob_enabled = null
head_bob_amplitude = null
head_bob_frequency = null
interaction_range = null

[node name="CollisionShape3D" type="CollisionShape3D" parent="FirstPersonPlayer" index="0"]
shape = SubResource("CapsuleShape3D_4boy8")

[node name="Head" type="Node3D" parent="FirstPersonPlayer" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.9, 0)

[node name="Camera3D" type="Camera3D" parent="FirstPersonPlayer/Head" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0)

[node name="InteractionRaycast" type="RayCast3D" parent="FirstPersonPlayer/Head/Camera3D" index="0"]

[node name="UI" type="Control" parent="FirstPersonPlayer" index="2"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="InteractionLabel" type="Label" parent="FirstPersonPlayer/UI" index="0"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Crosshair" type="Label" parent="FirstPersonPlayer/UI" index="1"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Floor" type="StaticBody3D" parent="." index="28"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Floor" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.7117, 0.275941, -2.50273)
mesh = SubResource("BoxMesh_65str")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor" index="1"]
shape = SubResource("BoxShape3D_30hy8")
